[package]
name = "libravatar"
version = "0.1.0"
authors = ["Kot <kot@yukata.tech>"]
license = "MIT"
description = "A Libravatar library"
keywords = ["avatar", "libravatar"]
categories = ["web-programming::http-client"]
repository = "https://github.com/kotx/libravatar.git"
edition = "2018"

[dependencies]
md5 = "0.7.0"
ureq = "2.0"
